@@ -9,9 +9,10 @@ lilv (0.24.27) unstable; urgency=medium
   * Fix potential memory leak in lilv_world_load_plugin_classes()
   * Fix potential memory leak in lilv_world_set_option()
   * Gracefully ignore and warn about non-directories in LV2_PATH
+  * Improve loading performance when many plugin versions are found
   * Reduce temporary node allocations during query operations
 
- -- David Robillard <d@drobilla.net>  Sat, 06 Sep 2025 19:38:36 +0000
+ -- David Robillard <d@drobilla.net>  Sat, 06 Sep 2025 19:44:02 +0000
 
 lilv (0.24.26) stable; urgency=medium
 
